# DeckBuilder

./: .gitignore  DeckBuilder.sln.DotSettings  build_library.ps1
App/: .gitignore  README.md
App/Assets/: .gitignore  CameraControl.cs  DamageIntentMaterial.mat  TransparentGray.mat  UniversalRenderPipelineAsset.asset
App/ProjectSettings/: EditorBuildSettings.asset  GraphicsSettings.asset  PackageManagerSettings.asset  ProjectSettings.asset  QualitySettings.asset
Assets/: Init.unity
Assets/Prefabs/: ActorProxy.prefab  DiscardPileProxy.prefab  DrawPileProxy.prefab  HandCardProxy.prefab  HandPileProxy.prefab  PileProxy.prefab
Assets/Scenes/: BattleScene.unity  Init.unity  Main.unity
Assets/Scripts/: ActorProxy.cs  ActorView.cs  BattleBootstrap.cs  BattleUIManager.cs  CardCreatedEvent.cs  CardCreatedEventArgs.cs  CardPlayedEvent.cs  CardProxy.cs  CardView.cs  CardsDatabase.cs  DiscardPileProxy.cs  DrawPileProxy.cs  EnemyActorManager.cs  EnemyActorProxy.cs  ExhaustPileProxy.cs  GameContext.cs  GameManager.cs  GlobalApi.cs  HandCardProxy.cs  HandPileProxy.cs  IContext.cs  IGameEventHandler.cs  IGlobalApi.cs  ITestContext.cs  Injector.cs  Main.cs  PileProxy.cs  PileView.cs  PlayerActorProxy.cs  Proxy.cs  SerializableDictionary.cs  View.cs
Cards/: Api-EventTemplates.DotSettings  Cards.sln  Cards.sln.DotSettings  CardsAndPiles-EventTemplates.DotSettings  EventTemplates.DotSettings  SummerJam1-EventTemplates.DotSettings
ProjectSettings/: EditorBuildSettings.asset
analytics/: README.md  dev.env  docker-compose.yaml  pyproject.toml  server.Dockerfile  server.py
(+1609 files in other folders)
